[gd_scene load_steps=12 format=3 uid="uid://b6vx7y6fndsm5"]

[ext_resource type="Script" path="res://levels/test stages/stage_test_free_fall.gd" id="1_4ab05"]
[ext_resource type="PackedScene" uid="uid://b7acyh6elurni" path="res://levels/level_mechanics/savepoint.tscn" id="1_thwt4"]
[ext_resource type="Texture2D" uid="uid://c8gyc1jvunhhb" path="res://assets/sprites/tilesets/debug_tileset_basic2.png" id="2_wvyr0"]
[ext_resource type="PackedScene" uid="uid://v3cirfwgjkwo" path="res://levels/level_mechanics/new_camera_system.tscn" id="3_bpc5k"]
[ext_resource type="PackedScene" uid="uid://ctdf8l75pwgyp" path="res://players/megaman.tscn" id="4_omk4l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gasl1"]
texture = ExtResource("2_wvyr0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_j71js"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gasl1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yelpb"]
size = Vector2(256, 1200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwpfa"]
size = Vector2(429, 235)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vakv"]
size = Vector2(478, 235)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsmv2"]
size = Vector2(40, 40)

[node name="stage_test_free_fall" type="Node2D"]
script = ExtResource("1_4ab05")

[node name="savepoint" parent="." instance=ExtResource("1_thwt4")]
position = Vector2(87, 159)

[node name="megaman" parent="." instance=ExtResource("4_omk4l")]
position = Vector2(87, 115)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_j71js")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1376257, 0, 0, 1441793, 0, 0, 1507329, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 1507330, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 1507331, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 1572864, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1769472, 0, 0, 1835008, 0, 0, 1900544, 0, 0, 1966080, 0, 0, 2031616, 0, 0, 2097152, 0, 0, 2162688, 0, 0, 2228224, 0, 0, 2293760, 0, 0, 2359296, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2621440, 0, 0, 2686976, 0, 0, 2752512, 0, 0, 2818048, 0, 0, 2883584, 0, 0, 3735552, 0, 0, 3801088, 0, 0, 3866624, 0, 0, 3932160, 0, 0, 3997696, 0, 0, 4063232, 0, 0, 4128768, 0, 0, 4194304, 0, 0, 4259840, 0, 0, 4325376, 0, 0, 4390912, 0, 0, 4456448, 0, 0, 4521984, 0, 0, 4587520, 0, 0, 4653056, 0, 0, 4718592, 0, 0, 4784128, 0, 0, 4849664, 0, 0, 4915200, 0, 0, 4980736, 0, 0, 5046272, 0, 0, 5111808, 0, 0, 5177344, 0, 0, 5242880, 0, 0, 5308416, 0, 0, 1572865, 0, 0, 1638401, 0, 0, 1703937, 0, 0, 1769473, 0, 0, 1835009, 0, 0, 1900545, 0, 0, 1966081, 0, 0, 2031617, 0, 0, 2097153, 0, 0, 2162689, 0, 0, 2228225, 0, 0, 2293761, 0, 0, 2359297, 0, 0, 2424833, 0, 0, 2490369, 0, 0, 2555905, 0, 0, 2621441, 0, 0, 2686977, 0, 0, 2752513, 0, 0, 2818049, 0, 0, 2883585, 0, 0, 3735553, 0, 0, 3801089, 0, 0, 3866625, 0, 0, 3932161, 0, 0, 3997697, 0, 0, 4063233, 0, 0, 4128769, 0, 0, 4194305, 0, 0, 4259841, 0, 0, 4325377, 0, 0, 4390913, 0, 0, 4456449, 0, 0, 4521985, 0, 0, 4587521, 0, 0, 4653057, 0, 0, 4718593, 0, 0, 4784129, 0, 0, 4849665, 0, 0, 4915201, 0, 0, 4980737, 0, 0, 5046273, 0, 0, 5111809, 0, 0, 5177345, 0, 0, 5242881, 0, 0, 5308417, 0, 0, 1572866, 0, 0, 1638402, 0, 0, 1703938, 0, 0, 1769474, 0, 0, 1835010, 0, 0, 1900546, 0, 0, 4259842, 0, 0, 4325378, 0, 0, 4390914, 0, 0, 4456450, 0, 0, 4521986, 0, 0, 4587522, 0, 0, 4653058, 0, 0, 4718594, 0, 0, 4784130, 0, 0, 4849666, 0, 0, 4915202, 0, 0, 4980738, 0, 0, 5046274, 0, 0, 5111810, 0, 0, 5177346, 0, 0, 5242882, 0, 0, 5308418, 0, 0, 1572867, 0, 0, 1638403, 0, 0, 1703939, 0, 0, 1769475, 0, 0, 1835011, 0, 0, 1900547, 0, 0, 4259843, 0, 0, 4325379, 0, 0, 4390915, 0, 0, 4456451, 0, 0, 4521987, 0, 0, 4587523, 0, 0, 4653059, 0, 0, 4718595, 0, 0, 4784131, 0, 0, 4849667, 0, 0, 4915203, 0, 0, 4980739, 0, 0, 5046275, 0, 0, 5111811, 0, 0, 5177347, 0, 0, 5242883, 0, 0, 5308419, 0, 0, 4259844, 0, 0, 4325380, 0, 0, 4390916, 0, 0, 4456452, 0, 0, 4521988, 0, 0, 4587524, 0, 0, 4653060, 0, 0, 4718596, 0, 0, 4784132, 0, 0, 4849668, 0, 0, 4915204, 0, 0, 4980740, 0, 0, 5046276, 0, 0, 5111812, 0, 0, 5177348, 0, 0, 5242884, 0, 0, 5308420, 0, 0, 4259845, 0, 0, 4325381, 0, 0, 4390917, 0, 0, 4456453, 0, 0, 4521989, 0, 0, 4587525, 0, 0, 4653061, 0, 0, 4718597, 0, 0, 4784133, 0, 0, 4849669, 0, 0, 4915205, 0, 0, 4980741, 0, 0, 5046277, 0, 0, 5111813, 0, 0, 5177349, 0, 0, 5242885, 0, 0, 5308421, 0, 0, 4259846, 0, 0, 4325382, 0, 0, 4390918, 0, 0, 4456454, 0, 0, 4521990, 0, 0, 4587526, 0, 0, 4653062, 0, 0, 4718598, 0, 0, 4784134, 0, 0, 4849670, 0, 0, 4915206, 0, 0, 4980742, 0, 0, 5046278, 0, 0, 5111814, 0, 0, 5177350, 0, 0, 5242886, 0, 0, 5308422, 0, 0, 4259847, 0, 0, 4325383, 0, 0, 4390919, 0, 0, 4456455, 0, 0, 4521991, 0, 0, 4587527, 0, 0, 4653063, 0, 0, 4718599, 0, 0, 4784135, 0, 0, 4849671, 0, 0, 4915207, 0, 0, 4980743, 0, 0, 5046279, 0, 0, 5111815, 0, 0, 5177351, 0, 0, 5242887, 0, 0, 5308423, 0, 0, 4259848, 0, 0, 4325384, 0, 0, 4390920, 0, 0, 4456456, 0, 0, 4521992, 0, 0, 4587528, 0, 0, 4653064, 0, 0, 4718600, 0, 0, 4784136, 0, 0, 4849672, 0, 0, 4915208, 0, 0, 4980744, 0, 0, 5046280, 0, 0, 5111816, 0, 0, 5177352, 0, 0, 5242888, 0, 0, 5308424, 0, 0, 4259849, 0, 0, 4325385, 0, 0, 4390921, 0, 0, 4456457, 0, 0, 4521993, 0, 0, 4587529, 0, 0, 4653065, 0, 0, 4718601, 0, 0, 4784137, 0, 0, 4849673, 0, 0, 4915209, 0, 0, 4980745, 0, 0, 5046281, 0, 0, 5111817, 0, 0, 5177353, 0, 0, 5242889, 0, 0, 5308425, 0, 0, 4259850, 0, 0, 4325386, 0, 0, 4390922, 0, 0, 4456458, 0, 0, 4521994, 0, 0, 4587530, 0, 0, 4653066, 0, 0, 4718602, 0, 0, 4784138, 0, 0, 4849674, 0, 0, 4915210, 0, 0, 4980746, 0, 0, 5046282, 0, 0, 5111818, 0, 0, 5177354, 0, 0, 5242890, 0, 0, 5308426, 0, 0, 4259851, 0, 0, 4325387, 0, 0, 4390923, 0, 0, 4456459, 0, 0, 4521995, 0, 0, 4587531, 0, 0, 4653067, 0, 0, 4718603, 0, 0, 4784139, 0, 0, 4849675, 0, 0, 4915211, 0, 0, 4980747, 0, 0, 5046283, 0, 0, 5111819, 0, 0, 5177355, 0, 0, 5242891, 0, 0, 5308427, 0, 0, 4259852, 0, 0, 4325388, 0, 0, 4390924, 0, 0, 4456460, 0, 0, 4521996, 0, 0, 4587532, 0, 0, 4653068, 0, 0, 4718604, 0, 0, 4784140, 0, 0, 4849676, 0, 0, 4915212, 0, 0, 4980748, 0, 0, 5046284, 0, 0, 5111820, 0, 0, 5177356, 0, 0, 5242892, 0, 0, 5308428, 0, 0, 4259853, 0, 0, 4325389, 0, 0, 4390925, 0, 0, 4456461, 0, 0, 4521997, 0, 0, 4587533, 0, 0, 4653069, 0, 0, 4718605, 0, 0, 4784141, 0, 0, 4849677, 0, 0, 4915213, 0, 0, 4980749, 0, 0, 5046285, 0, 0, 5111821, 0, 0, 5177357, 0, 0, 5242893, 0, 0, 5308429, 0, 0, 4259854, 0, 0, 4325390, 0, 0, 4390926, 0, 0, 4456462, 0, 0, 4521998, 0, 0, 4587534, 0, 0, 4653070, 0, 0, 4718606, 0, 0, 4784142, 0, 0, 4849678, 0, 0, 4915214, 0, 0, 4980750, 0, 0, 5046286, 0, 0, 5111822, 0, 0, 5177358, 0, 0, 5242894, 0, 0, 5308430, 0, 0, 3735567, 0, 0, 3801103, 0, 0, 3866639, 0, 0, 3932175, 0, 0, 3997711, 0, 0, 4063247, 0, 0, 4128783, 0, 0, 4194319, 0, 0, 4259855, 0, 0, 4325391, 0, 0, 4390927, 0, 0, 4456463, 0, 0, 4521999, 0, 0, 4587535, 0, 0, 4653071, 0, 0, 4718607, 0, 0, 4784143, 0, 0, 4849679, 0, 0, 4915215, 0, 0, 4980751, 0, 0, 5046287, 0, 0, 5111823, 0, 0, 5177359, 0, 0, 5242895, 0, 0, 5308431, 0, 0, 4390928, 0, 0, 4456464, 0, 0, 4522000, 0, 0, 4587536, 0, 0, 4653072, 0, 0, 4718608, 0, 0, 4784144, 0, 0, 4849680, 0, 0, 4915216, 0, 0, 4980752, 0, 0, 5046288, 0, 0, 5111824, 0, 0, 5177360, 0, 0, 5242896, 0, 0, 5308432, 0, 0, 4390929, 0, 0, 4456465, 0, 0, 4522001, 0, 0, 4587537, 0, 0, 4653073, 0, 0, 4718609, 0, 0, 4784145, 0, 0, 4849681, 0, 0, 4915217, 0, 0, 4980753, 0, 0, 5046289, 0, 0, 5111825, 0, 0, 5177361, 0, 0, 5242897, 0, 0, 5308433, 0, 0, 4390930, 0, 0, 4456466, 0, 0, 4522002, 0, 0, 4587538, 0, 0, 4653074, 0, 0, 4718610, 0, 0, 4784146, 0, 0, 4849682, 0, 0, 4915218, 0, 0, 4980754, 0, 0, 5046290, 0, 0, 5111826, 0, 0, 5177362, 0, 0, 5242898, 0, 0, 5308434, 0, 0, 4390931, 0, 0, 4456467, 0, 0, 4522003, 0, 0, 4587539, 0, 0, 4653075, 0, 0, 4718611, 0, 0, 4784147, 0, 0, 4849683, 0, 0, 4915219, 0, 0, 4980755, 0, 0, 5046291, 0, 0, 5111827, 0, 0, 5177363, 0, 0, 5242899, 0, 0, 5308435, 0, 0, 4390932, 0, 0, 4456468, 0, 0, 4522004, 0, 0, 4587540, 0, 0, 4653076, 0, 0, 4718612, 0, 0, 4784148, 0, 0, 4849684, 0, 0, 4915220, 0, 0, 4980756, 0, 0, 5046292, 0, 0, 5111828, 0, 0, 5177364, 0, 0, 5242900, 0, 0, 5308436, 0, 0, 4390933, 0, 0, 4456469, 0, 0, 4522005, 0, 0, 4587541, 0, 0, 4653077, 0, 0, 4718613, 0, 0, 4784149, 0, 0, 4849685, 0, 0, 4915221, 0, 0, 4980757, 0, 0, 5046293, 0, 0, 5111829, 0, 0, 5177365, 0, 0, 5242901, 0, 0, 5308437, 0, 0, 4390934, 0, 0, 4456470, 0, 0, 4522006, 0, 0, 4587542, 0, 0, 4653078, 0, 0, 4718614, 0, 0, 4784150, 0, 0, 4849686, 0, 0, 4915222, 0, 0, 4980758, 0, 0, 5046294, 0, 0, 5111830, 0, 0, 5177366, 0, 0, 5242902, 0, 0, 5308438, 0, 0, 4390935, 0, 0, 4456471, 0, 0, 4522007, 0, 0, 4587543, 0, 0, 4653079, 0, 0, 4718615, 0, 0, 4784151, 0, 0, 4849687, 0, 0, 4915223, 0, 0, 4980759, 0, 0, 5046295, 0, 0, 5111831, 0, 0, 5177367, 0, 0, 5242903, 0, 0, 5308439, 0, 0, 4390936, 0, 0, 4456472, 0, 0, 4522008, 0, 0, 4587544, 0, 0, 4653080, 0, 0, 4718616, 0, 0, 4784152, 0, 0, 4849688, 0, 0, 4915224, 0, 0, 4980760, 0, 0, 5046296, 0, 0, 5111832, 0, 0, 5177368, 0, 0, 5242904, 0, 0, 5308440, 0, 0, 4390937, 0, 0, 4456473, 0, 0, 4522009, 0, 0, 4587545, 0, 0, 4653081, 0, 0, 4718617, 0, 0, 4784153, 0, 0, 4849689, 0, 0, 4915225, 0, 0, 4980761, 0, 0, 5046297, 0, 0, 5111833, 0, 0, 5177369, 0, 0, 5242905, 0, 0, 5308441, 0, 0, 4390938, 0, 0, 4456474, 0, 0, 4522010, 0, 0, 4587546, 0, 0, 4653082, 0, 0, 4718618, 0, 0, 4784154, 0, 0, 4849690, 0, 0, 4915226, 0, 0, 4980762, 0, 0, 5046298, 0, 0, 5111834, 0, 0, 5177370, 0, 0, 5242906, 0, 0, 5308442, 0, 0, 4390939, 0, 0, 4456475, 0, 0, 4522011, 0, 0, 4587547, 0, 0, 4653083, 0, 0, 4718619, 0, 0, 4784155, 0, 0, 4849691, 0, 0, 4915227, 0, 0, 4980763, 0, 0, 5046299, 0, 0, 5111835, 0, 0, 5177371, 0, 0, 5242907, 0, 0, 5308443, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 1376271, 0, 0, 1441807, 0, 0, 1507343, 0, 0, 1572879, 0, 0, 1638415, 0, 0, 1703951, 0, 0, 1769487, 0, 0, 1835023, 0, 0, 1900559, 0, 0, 1966095, 0, 0, 2031631, 0, 0, 2097167, 0, 0, 2162703, 0, 0, 2228239, 0, 0, 2293775, 0, 0, 2359311, 0, 0, 2424847, 0, 0, 2490383, 0, 0, 2555919, 0, 0, 2621455, 0, 0, 2686991, 0, 0, 2752527, 0, 0, 2818063, 0, 0, 2883599, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 917518, 0, 0, 2949120, 0, 0, 3014656, 0, 0, 3080192, 0, 0, 3145728, 0, 0, 3211264, 0, 0, 3276800, 0, 0, 3342336, 0, 0, 3407872, 0, 0, 3473408, 0, 0, 3538944, 0, 0, 3604480, 0, 0, 3670016, 0, 0, 2949121, 0, 0, 3014657, 0, 0, 3080193, 0, 0, 3145729, 0, 0, 3211265, 0, 0, 3276801, 0, 0, 3342337, 0, 0, 3407873, 0, 0, 3473409, 0, 0, 3538945, 0, 0, 3604481, 0, 0, 3670017, 0, 0, 2949135, 0, 0, 3014671, 0, 0, 3080207, 0, 0, 3145743, 0, 0, 3211279, 0, 0, 3276815, 0, 0, 3342351, 0, 0, 3407887, 0, 0, 3473423, 0, 0, 3538959, 0, 0, 3604495, 0, 0, 3670031, 0, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(243, 227)

[node name="Node2D" type="Node2D" parent="."]

[node name="new_camera_system" parent="Node2D" node_paths=PackedStringArray("collision_limits_camera") instance=ExtResource("3_bpc5k")]
collision_limits_camera = NodePath("CollisionShape2D")

[node name="Camera2D" parent="Node2D/new_camera_system" index="0"]
limit_left = 0
limit_top = 0
limit_right = 256
limit_bottom = 1200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/new_camera_system"]
position = Vector2(128, 600)
shape = SubResource("RectangleShape2D_yelpb")

[node name="Marker2D" type="Marker2D" parent="Node2D/new_camera_system/CollisionShape2D"]
position = Vector2(-126.708, -59.0268)

[node name="new_camera_system2" parent="Node2D" node_paths=PackedStringArray("collision_limits_camera") instance=ExtResource("3_bpc5k")]
visible = false
position = Vector2(-483, -65)
collision_limits_camera = NodePath("CollisionShape2D")

[node name="Camera2D" parent="Node2D/new_camera_system2" index="0"]
limit_left = -584
limit_top = -85
limit_right = -155
limit_bottom = 149

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/new_camera_system2"]
position = Vector2(113.054, 97.461)
shape = SubResource("RectangleShape2D_iwpfa")
disabled = true

[node name="new_camera_system3" parent="Node2D" node_paths=PackedStringArray("collision_limits_camera") instance=ExtResource("3_bpc5k")]
visible = false
position = Vector2(-502, 211)
collision_limits_camera = NodePath("CollisionShape2D")

[node name="Camera2D" parent="Node2D/new_camera_system3" index="0"]
limit_left = -600
limit_top = 197
limit_right = -122
limit_bottom = 432

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/new_camera_system3"]
position = Vector2(140.595, 104.116)
shape = SubResource("RectangleShape2D_0vakv")
disabled = true

[node name="port_test1" type="Area2D" parent="."]
position = Vector2(316.44, 630.353)
collision_layer = 2
collision_mask = 2

[node name="ColorRect" type="ColorRect" parent="port_test1"]
offset_left = -21.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="port_test1"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_rsmv2")

[node name="port_test2" type="Area2D" parent="."]
position = Vector2(110, 87)
collision_layer = 2
collision_mask = 2

[node name="ColorRect" type="ColorRect" parent="port_test2"]
offset_left = -21.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="port_test2"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_rsmv2")

[connection signal="body_entered" from="port_test1" to="." method="_on_port_test_1_body_entered"]
[connection signal="body_entered" from="port_test2" to="." method="_on_port_test_2_body_entered"]

[editable path="Node2D/new_camera_system"]
[editable path="Node2D/new_camera_system2"]
[editable path="Node2D/new_camera_system3"]
